WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184642
[MSE] New SourceBuffers Objects from WebCore/JavaScript
https://bugs.webkit.org/show_bug.cgi?id=184642
Summary
[MSE] New SourceBuffers Objects from WebCore/JavaScript
Eric Stobbart
Reported
2018-04-15 22:03:27 PDT
MediaSource.idl is using a cached wrapped object, causing SourceBuffers to leak.
Attachments
Patch
(1.37 KB, patch)
2018-04-15 22:05 PDT
,
Eric Stobbart
no flags
Details
Formatted Diff
Diff
Patch
(3.64 KB, patch)
2018-04-16 06:34 PDT
,
Eric Stobbart
no flags
Details
Formatted Diff
Diff
Patch
(3.66 KB, patch)
2018-04-16 08:01 PDT
,
Eric Stobbart
no flags
Details
Formatted Diff
Diff
Patch
(4.19 KB, patch)
2018-04-16 08:11 PDT
,
Eric Stobbart
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews123 for ios-simulator-wk2
(8.84 MB, application/zip)
2018-04-16 09:44 PDT
,
EWS Watchlist
no flags
Details
Patch
(3.62 KB, patch)
2018-04-17 20:10 PDT
,
Eric Stobbart
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews206 for win-future
(12.62 MB, application/zip)
2018-04-17 22:39 PDT
,
EWS Watchlist
no flags
Details
Patch
(3.63 KB, patch)
2018-04-18 18:42 PDT
,
Eric Stobbart
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Eric Stobbart
Comment 1
2018-04-15 22:05:15 PDT
Created
attachment 337987
[details]
Patch
Eric Stobbart
Comment 2
2018-04-16 06:34:55 PDT
Created
attachment 337995
[details]
Patch
Eric Stobbart
Comment 3
2018-04-16 08:01:49 PDT
Created
attachment 337999
[details]
Patch
Eric Stobbart
Comment 4
2018-04-16 08:11:17 PDT
Created
attachment 338003
[details]
Patch
EWS Watchlist
Comment 5
2018-04-16 09:44:01 PDT
Comment on
attachment 338003
[details]
Patch
Attachment 338003
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/7331662
New failing tests: compositing/debug-borders-dynamic.html
EWS Watchlist
Comment 6
2018-04-16 09:44:03 PDT
Created
attachment 338008
[details]
Archive of layout-test-results from ews123 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews123 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
Eric Stobbart
Comment 7
2018-04-17 20:09:02 PDT
Original description isn't as accurate as it should be. Edited the title to better reflect the issue.
Eric Stobbart
Comment 8
2018-04-17 20:10:08 PDT
Created
attachment 338192
[details]
Patch
Eric Stobbart
Comment 9
2018-04-17 21:01:24 PDT
I'm unable to reproduce these build failures locally. Could someone help me look into this?
EWS Watchlist
Comment 10
2018-04-17 22:39:40 PDT
Comment on
attachment 338192
[details]
Patch
Attachment 338192
[details]
did not pass win-ews (win): Output:
http://webkit-queues.webkit.org/results/7353004
New failing tests: http/tests/security/contentSecurityPolicy/video-with-https-url-allowed-by-csp-media-src-star.html
EWS Watchlist
Comment 11
2018-04-17 22:39:51 PDT
Created
attachment 338196
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Chris Dumez
Comment 12
2018-04-18 14:29:27 PDT
Comment on
attachment 338192
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=338192&action=review
> Source/WebCore/Modules/mediasource/MediaSource.cpp:677 > + return buffer;
return WTFMove(buffer); I think
Eric Stobbart
Comment 13
2018-04-18 18:42:41 PDT
Created
attachment 338295
[details]
Patch
Eric Stobbart
Comment 14
2018-04-19 06:43:35 PDT
(In reply to Chris Dumez from
comment #12
)
> Comment on
attachment 338192
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=338192&action=review
> > > Source/WebCore/Modules/mediasource/MediaSource.cpp:677 > > + return buffer; > > return WTFMove(buffer); I think
Magic. Thanks man!
Chris Dumez
Comment 15
2018-04-19 08:35:07 PDT
Comment on
attachment 338295
[details]
Patch r=me
WebKit Commit Bot
Comment 16
2018-04-19 09:01:15 PDT
Comment on
attachment 338295
[details]
Patch Clearing flags on attachment: 338295 Committed
r230805
: <
https://trac.webkit.org/changeset/230805
>
WebKit Commit Bot
Comment 17
2018-04-19 09:01:17 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 18
2018-04-19 09:04:34 PDT
<
rdar://problem/39565703
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug