Change MediaSource WebCore to return NewObject for SourceBuffers https://bugs.webkit.org/show_bug.cgi?id=184642

Patch by Eric Stobbart <ericstobbart@gmail.com> on 2018-04-19
Reviewed by Chris Dumez.

Minor change inline with IDL documentation

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::addSourceBuffer):
(): Deleted.
* Modules/mediasource/MediaSource.h:
* Modules/mediasource/MediaSource.idl:

Canonical link: https://commits.webkit.org/200284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230805 268f45cc-cd09-0410-ab3c-d52691b4dbfc